@@ -1,3 +1,7 @@
+Dec 12, 2006
+
+  * FIXED: Properly close sockets on errors in http_open/3.
+
 Dec 8, 2006
 
   * ADDED: support for HEAD to http_open/3.
